segundo agregado coon componentes

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Mauricio carlos</title>
+  <meta name="description" content="Roughly 155 characters">
+  <!-- Poner borde lila -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+   <!-- Poner formitas a botones de editar y agregar, etc -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+
+  <!-- No se sabe que hace todavia -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+ <!-- Decia my style
+  <link rel="stylesheet" type="text/css" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
